crates/ty/tests/cli/snapshots/cli__output_format_full.snap
---
source: crates/ty/tests/cli/main.rs
info:
  program: ty
  args:
    - check
    - "--output-format"
    - full
    - "--target-version"
    - "3.9"
---
success: false
exit_code: 1
----- stdout -----
info[revealed-type]: Revealed type
 --> test.py:3:13
  |
2 | from typing_extensions import reveal_type
3 | reveal_type('str'.lower())  # revealed-type
  |             ^^^^^^^^^^^^^ `LiteralString`
4 | match 42:  # invalid-syntax
5 |     case _: ...
  |

error[invalid-syntax]: Cannot use `match` statement on Python 3.9 (syntax was added in Python 3.10)
 --> test.py:4:1
  |
2 | from typing_extensions import reveal_type
3 | reveal_type('str'.lower())  # revealed-type
4 | match 42:  # invalid-syntax
  | ^^^^^
5 |     case _: ...
  |
info: Python 3.9 was assumed when parsing syntax because it was specified on the command line

Found 2 diagnostics

----- stderr -----
